--- a/html/src/components/navlink.module.css
+++ b/html/src/components/navlink.module.css
@@ -13,6 +13,7 @@
 .active {
     font-weight: 400;
     border-left: 1px solid #bcc3ce;
-    margin-left: -0.33em;
+    margin-left: -0.38em;
     padding-left: 0.33em;
+    
 }
